# FBA-Bench-Enterprise

./: .coveragerc  .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  .roomodes  .tmp_frontend_services.txt  .tmp_or_body.json  AGENTS.md  AUDIT_COMPLETION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEV_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.prod  FBA-Bench-Enterprise.code-workspace  FBA-Bench.code-workspace  FBA.cmd  GO_TO_MARKET.md  LICENSE  MASTER_GUIDE.md  MIGRATION.md  Makefile  POLISH_AND_LAUNCH_PLAN.md  README.md  README_OpenRouter_Benchmark.md  Refactoring.txt  SECURITY.md  SUPPORT.md  TERMS_OF_SERVICE.md  VALIDATION.md  alembic.ini  alembic_error.txt  alembic_sql_error.txt  alert_system.py  all_benchmarking_files.txt  (+116 more)
.agent/: RULES.md  all_py_files.txt  audit_master_log.md  audit_report.md  audit_results.md  context.md  context_template.md
.github/: dependabot.yml  pull_request_template.md
.roo/: modes.yaml
.tmp/: contracts.out  coverage.out  versions.txt
agents/: __init__.py
agents_deprecated/: __init__.py
alembic/: env.py  script.py.mako
api/: __init__.py  config.py  db.py  dependencies.py  jwt.py  models.py  security.py  server.py  startup.py
artifacts/: OPENROUTER_DEBUG.md  YEAR_RUNS_STATUS.md  sha1_run1.parquet  sha1_run1_enhanced.json  sha2_run2_enhanced.json  test123_run456.json
baseline_bots/: __init__.py  bot_factory.py  gpt_3_5_bot.py  openrouter_bot.py
community/: __init__.py  contribution_tools.py  contribution_tools_production.py
config/: clearml.conf  config.yaml  model_config.py
configs/: clearml_game_theme.css  clearml_smoketest.yaml  grok_learning_agent.yaml  grok_learning_experiment.yaml  learning_experiment_config.yaml  live_agent_config.yaml  model_params.yaml  sim_benchmark_contract_v1.json  sim_realism.yaml  sim_realism_stress_returns.yaml  simulation_factors.yaml  smarter_agent_config.yaml  yaml_validation_report.txt
constraints/: agent_gateway.py  budget_enforcer.py  token_counter.py
dashboard/: __init__.py  api.py  models.py  secure_api.py
dependency_injector/: __init__.py  containers.py  providers.py
docs/: API.md  CNAME  README.md  RUNBOOK_DEMO.md  RUNBOOK_SIM_BENCHMARK_V1.md  RUNBOOK_SIM_THEATER.md  STARTUP.md  _headers  _redirects  agent_runners.md  architecture.md  audit_and_replay.md  benchmark_philosophy.md  benchmarking_system.md  budget_constraints.md  codebase_map.md  cognitive_memory.md  configuration.md  consumer_utility_model.md  contact.html  data-model-inventory.md  deployment-optimized.md  deployment.md  disclaimer.md  docs.html  features_overview.md  getting-started.md  index.html  leaderboard_publisher.md  leaderboard_submissions.md  learning_systems.md  ledger_system.md  llm_interface.md  market_dynamics.md  medusa.md  metrics_suite.md  observability.md  observability_stack.md  plugin_framework.md  privacy.md  (+19 more)
env/: production.env.example  staging.env.example
event_bus/: __init__.py
events/: __init__.py
examples/: learning_example.py  real_world_integration_example.py
fba_bench/: __init__.py  money.py
fba_bench_core/: __init__.py  event_bus.py  services.py
fba_events/: __init__.py  adversarial.py  base.py  compat.py  competitor.py  time_events.py
frontend/: .env.production  .env.staging  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
godot_gui/: .gitignore  CONTEXT.md  UITheme.tres  project.godot
infra/: main.tf
infrastructure/: .gitignore  CONTEXT.md  README.md  __init__.py  deployment.py  distributed_coordinator.py  distributed_event_bus.py  fast_forward_engine.py  llm_batcher.py  openrouter_client.py  performance_monitor.py  resource_manager.py  scalability_config.py
instrumentation/: __init__.py  tracer.py
integration/: README.md  __init__.py  api_bridge.py  consistency_checker.py  gradual_rollout.py  integration_validator.py  real_world_adapter.py  risk_manager.py  safety_validator.py  sandbox_environment.py
integration_tests/: README.md  __init__.py  demo_scenarios.py  run_integration_tests.py  test_cross_system_integration.py  test_end_to_end_workflow.py  test_performance_benchmarks.py  test_scientific_reproducibility.py  test_simulation_loop.py  test_tier1_requirements.py  validation_report.py
leaderboard/: __init__.py  ci_integration.py  leaderboard_manager.py  leaderboard_renderer.py  score_tracker.py
learning/: README.md  __init__.py  curriculum_learning.py  episodic_learning.py  learning_config.py  meta_learning.py  reinforcement_learning.py  rl_environment.py
learning_data/: agent_agent1_experience.json
llm_interface/: config.py  openrouter_client.py  pricing.py  prompt_adapter.py  response_parser.py
marketing/: README.md  social_posts.md
medusa_experiments/: README.md  medusa_analyzer.py  medusa_trainer.py  schema.py  test_medusa.py  test_schema.py
metrics/: __init__.py  metric_suite.py
money/: __init__.py
prometheus_client/: __init__.py
public_results/: README.md
redteam_scripts/: README.md  __init__.py  exploit_template.yaml
repos/: PENDING_REVIEW.txt  file_split_map.json  split_report.json
scripts/: __init__.py  batch_runner.py  cheap_llm_smoke_test.py  check_quality_gates.py  cleanup-repo-size.ps1  cli.py  cloudflare-tunnel.ps1  compare_benchmarks.py  copy_missing_services.py  db_migrate.py  deploy.ps1  deploy.sh  docker-setup.bat  docker-setup.ps1  docker-setup.sh  fba-start.bat  find_bad_json.py  find_missing_imports.py  generate_roi_calculator.py  generate_test_report.py  healthcheck.py  ingest_leaderboard_comp.py  init-db.sql  install.bat  install.ps1  install.sh  minimal_cost_test.py  mock_simulation_server.py  monitor_year_batch.py  oneclick-configure.ps1  oneclick-configure.sh  oneclick-launch.ps1  oneclick-launch.ps1.bak  oneclick-launch.sh  oneclick-stop.ps1  oneclick-stop.sh  openrouter_chat_body.json  perform_split.py  populate_benchmarks.py  populate_clearml_demo.py  (+47 more)
src/: event_bus.py  events.py  simulation_orchestrator.py
tests/: CONTEXT.md  TESTING_STRATEGY.md  (+47 more)
(+1896 files in other folders)
