[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fba-bench-enterprise"
version = "0.1.0"
description = "FBA-Bench Enterprise: benchmarking and simulation platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FBA-Bench Team" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# Discover packages from both the repo root and the src/ directory
where = [".", "src"]
include = [
  "api*",
  "constraints*",
  "metrics*",
  "baseline_bots*",
  "dashboard*",
  "infrastructure*",
  "leaderboard*",
  "fba_events*",
  "redteam_scripts*",
  "services*",
  "redteam*",
  "agents*",
  "money*",
  "fba_bench_core*",
  "fba_bench*",
  "event_bus*",
]
exclude = ["tests*", "integration_tests*", "scripts*", "docs*", "marketing*", "infra*"]