[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fba-bench-enterprise"
version = "1.0.0-rc1"
description = "FBA-Bench Enterprise: benchmarking and simulation platform"
authors = ["FBA-Bench Team"]
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/Bender1011001/FBA-Bench-Enterprise"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [
    {include = "fba_bench_core", from = "src"},
    {include = "fba_bench_api", from = "src"},
    {include = "fba_bench", from = "src"},
    {include = "agents", from = "src"},
    {include = "agent_runners", from = "src"},
    {include = "baseline_bots", from = "src"},
    {include = "benchmarking", from = "src"},
    {include = "config", from = "src"},
    {include = "constraints", from = "src"},
    {include = "fba_events", from = "src"},
    {include = "instrumentation", from = "src"},
    {include = "llm_interface", from = "src"},
    {include = "memory_experiments", from = "src"},
    {include = "metrics", from = "src"},
    {include = "models", from = "src"},
    {include = "money", from = "src"},
    {include = "observability", from = "src"},
    {include = "personas", from = "src"},
    {include = "plugins", from = "src"},
    {include = "redteam", from = "src"},
    {include = "reproducibility", from = "src"},
    {include = "scenarios", from = "src"},
    {include = "services", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.20.0"
alembic = "1.16.5"
annotated-types = "0.7.0"
anyio = "4.11.0"
argon2-cffi = "23.1.0"
certifi = "2025.8.3"
cffi = "2.0.0"
click = "8.1.8"
colorama = "0.4.6"
cryptography = "43.0.3"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.3.0"
exceptiongroup = "1.3.0"
fastapi = "0.115.14"
greenlet = "3.2.4"
h11 = "0.16.0"
httptools = "0.6.4"
httpx = "^0.27.0"
idna = "3.10"
jsonschema = "^4.23.0"
mako = "1.3.10"
markupsafe = "3.0.3"
numpy = "^1.26.0"
packaging = "24.2"
pandas = "^2.2.0"
passlib = "^1.7.4"
psutil = "^6.0.0"
pyasn1 = "0.6.1"
pycparser = "2.23"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
pydantic = "2.11.9"
pydantic-core = "2.33.2"
pydantic-settings = "2.11.0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
pyyaml = "6.0.3"
redis = "^5.0.0"
requests = "2.32.5"
rsa = "4.9.1"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.43"
starlette = "0.46.2"
stripe = "12.5.1"
tiktoken = "^0.6.0"
tomli = "2.2.1"
typing-extensions = "4.15.0"
typing-inspection = "0.4.1"
urllib3 = "2.5.0"
uvicorn = "0.30.6"
watchfiles = "1.1.0"
websockets = "15.0.1"
psycopg2-binary = "^2.9.9"
dependency-injector = "^4.41.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = {extras = ["black"], version = "^5.13.0"}
mypy = "^1.10.0"
types-PyYAML = "^6.0.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.extras]
dev = ["dev"]
test = ["test"]
docs = ["docs"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Keep core error checks while unblocking CI by relaxing noisy style checks.
# We scope strictness mainly to src/ and ease constraints for tests/migrations.
select = ["E", "F"]
ignore = ["E501","E402","E741","E721","E712"]

# Directory-specific relaxations to avoid penalizing tests and migrations.
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "F401",  # unused imports acceptable in test scaffolding
  "F841",  # assigned but unused (mocks, placeholders)
  "E712",  # True/False comparisons in tests
  "F821",  # undefined names for test doubles/stubs
]
"alembic/**" = [
  "E402",  # imports placement in env.py
  "F403",  # import * used for model registration
  "F401",  # unused imports
]

[tool.ruff.lint.isort]
known-first-party = ["fba_bench_core", "fba_bench_api", "agents", "agent_runners", "benchmarking", "scenarios", "plugins", "fba_events"]
combine-as-imports = true
order-by-type = true

[tool.mypy]
python_version = "3.9"
# Keep strong defaults, scope where they apply
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
# Do not follow imports into untyped/external modules
follow_imports = "skip"
# Curated typed surface for this phase
files = ["src"]

# Tests and scripts can be more lenient
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false

# Known third-party or internal modules without stubs
[[tool.mypy.overrides]]
module = [
  "opentelemetry",
  "opentelemetry.*",
  "slowapi",
  "slowapi.*",
  "jsonschema",
  "money",
  "fba_bench",
  "fba_bench.*",
  "fba_bench_api",
  "fba_bench_api.*",
  "fba_bench_core",
  "fba_bench_core.*",
]
ignore_missing_imports = true

# Optional frameworks
[[tool.mypy.overrides]]
module = ["crewai.*", "langchain.*"]
ignore_missing_imports = true
